<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.andrey.myappportfolio.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_main_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:text="@string/textview_main_header_text"
                android:textSize="@dimen/abc_text_size_large_material" />

            <Button
                android:id="@+id/button_main_spotify"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:background="#4caf50"
                android:onClick="displayToast"
                android:text="@string/button_main_spotify_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_main_scores"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:background="#4caf50"
                android:onClick="displayToast"
                android:text="@string/button_main_scores_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_main_library"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:background="#4caf50"
                android:onClick="displayToast"
                android:text="@string/button_main_buildbigger_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_main_buildbigger"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:background="#4caf50"
                android:onClick="displayToast"
                android:text="@string/button_main_buildbigger_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_main_xyzreader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:background="#4caf50"
                android:onClick="displayToast"
                android:text="@string/button_main_xyzreader_text"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_main_capstone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:background="#1B5E20"
                android:onClick="displayToast"
                android:text="@string/button_main_capstone_text"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
